--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "react-bootstrap-table": "^3.3.9",
     "react-composer": "^1.0.1",
     "react-controllables": "^0.6.0",
+    "react-d3-basic": "^1.6.11",
+    "react-d3-tooltip": "^1.4.14",
     "react-datetime": "^2.8.8",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
