--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "meteor-node-stubs": "^0.2.5",
     "points-cluster": "^0.1.4",
     "q": "^1.4.1",
+    "rc-tabs": "^8.0.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-pure-render-mixin": "^15.5.2",
