--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "production": "meteor deploy production.meteor.com --settings settings-prod.json"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "chimp": "^0.41.2",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
@@ -75,6 +75,7 @@
     "connect-multiparty": "^2.0.0",
     "cors": "^2.8.1",
     "csrf": "^3.0.6",
+    "custom-error": "^0.2.1",
     "deep-diff": "^0.3.4",
     "deep-extend": "^0.4.1",
     "dinstar-sms-api": "^0.1.5",
@@ -137,6 +138,7 @@
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "simpl-schema": "^0.2.2",
+    "styles": "^0.2.1",
     "underscore": "^1.8.3",
     "video.js": "^5.20.1"
   }
