--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "graphql-server-express": "^0.5.2",
     "graphql-tag": "^0.1.13",
     "graphql-tools": "^0.9.0",
+    "graphql-type-json": "^0.1.4",
     "graphql-typings": "0.0.1-beta-2",
     "graphql-utilities": "0.0.14",
     "helmet": "^3.6.1",
