--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "meteor-node-stubs": "^0.2.5",
     "points-cluster": "^0.1.4",
+    "prop-types": "^15.5.10",
     "q": "^1.4.1",
     "rc-tabs": "^8.0.1",
     "react": "^15.5.4",
