--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "immutability-helper": "^2.1.2",
     "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.13",
+    "libphonenumber-js": "^0.4.23",
     "loadash": "0.0.1",
     "lodash": "^4.17.4",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
