--- a/package.json
+++ b/package.json
@@ -111,12 +111,16 @@
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-apollo": "^0.8.3",
+    "react-big-calendar": "^0.14.4",
     "react-bootstrap-table": "^3.3.9",
     "react-composer": "^1.0.1",
     "react-controllables": "^0.6.0",
     "react-d3-basic": "^1.6.11",
     "react-d3-tooltip": "^1.4.14",
     "react-datetime": "^2.8.8",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
+    "react-dnd-touch-backend": "^0.3.12",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
     "react-komposer": "^1.13.1",
