audit enabled for prod and UAT

--- a/settings-uat.json
+++ b/settings-uat.json
@@ -35,6 +35,6 @@
     "googleApiKey": "AIzaSyAd7VZpzSCdkOrkgdhCbMm3JYqwGap0Pa4",
     "fromEmailAddr":"noreply@moolya.in",
     "isEmailDomainCheckEnabled":true,
-    "isAuditEnabled":false
+    "isAuditEnabled":true
   }
 }
