Confirmation Prompt added for registration Used packages: react-confirm-bootstrap(dependency react-bootstrap)

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-addons-transition-group": "^15.5.2",
     "react-apollo": "^0.8.3",
     "react-big-calendar": "^0.14.4",
+    "react-bootstrap": "^0.31.1",
     "react-bootstrap-table": "^3.3.9",
     "react-composer": "^1.0.1",
     "react-controllables": "^0.6.0",
