--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-tab-panel": "^2.2.7",
     "react-toastify": "^1.7.0",
-    "react-toastr": "^2.8.2",
+    "react-toastr": "2.8.2",
     "react-transition-group": "^1.1.3",
     "react-utils": "^1.0.0",
     "reactstrap": "^4.5.0",
