--- a/package.json
+++ b/package.json
@@ -148,6 +148,8 @@
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "simpl-schema": "^0.2.2",
+    "socket-kinda-ntp": "0.0.1",
+    "socket.io-client": "^2.0.3",
     "styles": "^0.2.1",
     "underscore": "^1.8.3",
     "video.js": "^5.20.1"
