--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "bufferutil": "^3.0.2",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.8.1",
     "csrf": "^3.0.6",
@@ -148,8 +149,11 @@
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "simpl-schema": "^0.2.2",
+    "socket-kinda-ntp": "0.0.1",
+    "socket.io-client": "^2.0.3",
     "styles": "^0.2.1",
     "underscore": "^1.8.3",
+    "utf-8-validate": "^3.0.3",
     "video.js": "^5.20.1"
   }
 }
