--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "aws-config": "^1.1.3",
     "aws-sdk": "^2.28.0",
     "babel-runtime": "^6.23.0",
+    "base-64": "^0.1.0",
+    "base64-min": "^2.0.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
