--- a/settings-qa.json
+++ b/settings-qa.json
@@ -35,6 +35,7 @@
     "smtpMailUrl":"smtp://qasmtp%40moolya.in:Moolya123@smtp.moolya.in:25",
     "fromEmailAddr":"qasmtp@moolya.in",
     "isEmailDomainCheckEnabled":true,
-    "isAuditEnabled":true
+    "isAuditEnabled":true,
+    "conversationsBaseURL":"http://54.254.220.180"
   }
 }
