--- a/package.json
+++ b/package.json
@@ -64,88 +64,88 @@
   },
   "dependencies": {
     "apollo-client": "^0.8.0",
-    "apollo-server": "^0.2.8",
+    "apollo-server": "0.2.8",
     "async": "^2.3.0",
-    "aws-config": "^1.1.3",
+    "aws-config": "1.1.3",
     "aws-sdk": "^2.28.0",
     "babel-runtime": "^6.23.0",
-    "base-64": "^0.1.0",
-    "base64-min": "^2.0.0",
-    "bcrypt": "^0.8.7",
+    "base-64": "0.1.0",
+    "base64-min": "2.0.0",
+    "bcrypt": "0.8.7",
     "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "3.3.7",
     "bufferutil": "3.0.2",
-    "connect-multiparty": "^2.0.0",
+    "connect-multiparty": "2.0.0",
     "cors": "^2.8.1",
-    "csrf": "^3.0.6",
-    "custom-error": "^0.2.1",
+    "csrf": "3.0.6",
+    "custom-error": "0.2.1",
     "deep-diff": "^0.3.4",
     "deep-extend": "^0.4.1",
-    "dinstar-sms-api": "^0.1.5",
+    "dinstar-sms-api": "0.1.5",
     "express": "^4.14.0",
-    "extendify": "^1.0.0",
+    "extendify": "1.0.0",
     "geocoder": "^0.2.2",
-    "google-map-react": "^0.22.3",
+    "google-map-react": "0.22.3",
     "gql-merge": "0.0.4",
-    "graphql": "^0.8.2",
-    "graphql-parser": "^2.1.0",
-    "graphql-server-express": "^0.5.2",
+    "graphql": "0.8.2",
+    "graphql-parser": "2.1.0",
+    "graphql-server-express": "0.5.2",
     "graphql-tag": "^0.1.13",
     "graphql-tools": "^0.9.0",
-    "graphql-type-json": "^0.1.4",
+    "graphql-type-json": "0.1.4",
     "graphql-typings": "0.0.1-beta-2",
     "graphql-utilities": "0.0.14",
     "helmet": "^3.6.1",
-    "http-proxy": "^1.16.2",
+    "http-proxy": "1.16.2",
     "http-proxy-middleware": "^0.17.3",
     "immutability-helper": "^2.1.2",
-    "jquery": "^3.2.1",
-    "jquery-mousewheel": "^3.1.13",
-    "libphonenumber-js": "^0.4.23",
+    "jquery": "3.2.1",
+    "jquery-mousewheel": "3.1.13",
+    "libphonenumber-js": "0.4.23",
     "loadash": "0.0.1",
-    "lodash": "^4.17.4",
-    "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "lodash": "4.17.4",
+    "malihu-custom-scrollbar-plugin": "3.1.5",
     "meteor-node-stubs": "^0.2.5",
-    "mocha": "^3.4.2",
-    "points-cluster": "^0.1.4",
-    "prop-types": "^15.5.10",
+    "mocha": "3.4.2",
+    "points-cluster": "0.1.4",
+    "prop-types": "15.5.10",
     "q": "^1.4.1",
     "rc-tabs": "^8.0.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
-    "react-apollo": "^0.8.3",
-    "react-big-calendar": "^0.14.4",
-    "react-bootstrap": "^0.31.2",
+    "react-apollo": "0.8.3",
+    "react-big-calendar": "0.14.4",
+    "react-bootstrap": "0.31.2",
     "react-bootstrap-table": "^3.3.9",
     "react-composer": "^1.0.1",
     "react-controllables": "^0.6.0",
-    "react-d3-basic": "^1.6.11",
-    "react-d3-tooltip": "^1.4.14",
+    "react-d3-basic": "1.6.11",
+    "react-d3-tooltip": "1.4.14",
     "react-datetime": "^2.8.8",
-    "react-dnd": "^2.4.0",
-    "react-dnd-html5-backend": "^2.4.1",
+    "react-dnd": "2.4.0",
+    "react-dnd-html5-backend": "2.4.1",
     "react-dnd-touch-backend": "^0.3.12",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
     "react-komposer": "^1.13.1",
-    "react-meta-tags": "^0.1.3",
+    "react-meta-tags": "0.1.3",
     "react-motion": "^0.4.7",
-    "react-mounter": "^1.2.0",
+    "react-mounter": "1.2.0",
     "react-places-autocomplete": "^3.0.0",
-    "react-pure-render": "^1.0.2",
+    "react-pure-render": "1.0.2",
     "react-rangeslider": "^2.0.1",
-    "react-rating": "^0.7.1",
+    "react-rating": "0.7.1",
     "react-responsive-tabs": "^1.0.1",
-    "react-scrollbar": "^0.5.1",
-    "react-scrollbar-js": "^1.0.1",
+    "react-scrollbar": "0.5.1",
+    "react-scrollbar-js": "1.0.1",
     "react-select": "^1.0.0-rc.3",
-    "react-tab-panel": "^2.2.7",
-    "react-toastify": "^1.7.0",
+    "react-tab-panel": "2.2.7",
+    "react-toastify": "1.7.0",
     "react-toastr": "2.8.2",
     "react-transition-group": "^1.1.3",
-    "react-utils": "^1.0.0",
+    "react-utils": "1.0.0",
     "reactstrap": "^4.5.0",
     "recompose": "^0.23.1",
     "redis": "^2.7.1",
@@ -153,9 +153,9 @@
     "simpl-schema": "^0.2.2",
     "socket-kinda-ntp": "0.0.1",
     "socket.io-client": "2.0.3",
-    "styles": "^0.2.1",
-    "underscore": "^1.8.3",
-    "utf-8-validate": "^3.0.3",
+    "styles": "0.2.1",
+    "underscore": "1.8.3",
+    "utf-8-validate": "3.0.3",
     "video.js": "5.20.1"
   }
 }
