Updated the package.json file to retain the version of packages

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "graphql-type-json": "0.1.4",
     "graphql-typings": "0.0.1-beta-2",
     "graphql-utilities": "0.0.14",
-    "helmet": "^3.6.1",
+    "helmet": "3.6.1",
     "http-proxy": "1.16.2",
     "http-proxy-middleware": "^0.17.3",
     "immutability-helper": "^2.1.2",
@@ -119,8 +119,8 @@
     "react-big-calendar": "0.14.4",
     "react-bootstrap": "0.31.2",
     "react-bootstrap-table": "^3.3.9",
-    "react-composer": "^1.0.1",
-    "react-controllables": "^0.6.0",
+    "react-composer": "1.0.1",
+    "react-controllables": "0.6.0",
     "react-d3-basic": "1.6.11",
     "react-d3-tooltip": "1.4.14",
     "react-datetime": "^2.8.8",
@@ -129,13 +129,13 @@
     "react-dnd-touch-backend": "^0.3.12",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.5.0",
-    "react-komposer": "^1.13.1",
+    "react-komposer": "1.13.1",
     "react-meta-tags": "0.1.3",
-    "react-motion": "^0.4.7",
+    "react-motion": "0.4.7",
     "react-mounter": "1.2.0",
-    "react-places-autocomplete": "^3.0.0",
+    "react-places-autocomplete": "3.0.0",
     "react-pure-render": "1.0.2",
-    "react-rangeslider": "^2.0.1",
+    "react-rangeslider": "2.0.1",
     "react-rating": "0.7.1",
     "react-responsive-tabs": "^1.0.1",
     "react-scrollbar": "0.5.1",
@@ -146,10 +146,10 @@
     "react-toastr": "2.8.2",
     "react-transition-group": "^1.1.3",
     "react-utils": "1.0.0",
-    "reactstrap": "^4.5.0",
-    "recompose": "^0.23.1",
-    "redis": "^2.7.1",
-    "redux": "^3.6.0",
+    "reactstrap": "4.5.0",
+    "recompose": "0.23.1",
+    "redis": "2.7.1",
+    "redux": "3.6.0",
     "simpl-schema": "^0.2.2",
     "socket-kinda-ntp": "0.0.1",
     "socket.io-client": "2.0.3",
