--- a/package.json
+++ b/package.json
@@ -128,7 +128,9 @@
     "react-dnd-html5-backend": "2.4.1",
     "react-dnd-touch-backend": "^0.3.12",
     "react-dom": "^15.4.2",
+    "react-event-observer": "^0.4.11",
     "react-fontawesome": "^1.5.0",
+    "react-infinite-scroll-component": "^2.4.0",
     "react-komposer": "1.13.1",
     "react-meta-tags": "0.1.3",
     "react-motion": "0.4.7",
