--- a/settings-uat.json
+++ b/settings-uat.json
@@ -20,14 +20,16 @@
     },
     "aws":{
       "s3Config":{
-        "accessKeyId":"",
-        "secretAccessKey":"",
+        "accessKeyId":"AKIAIOLVK4M2SMABND3Q",
+        "secretAccessKey":"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",
         "maxAsyncS3":20,
         "s3RetryCount":3,
         "s3RetryDelay":1000,
         "multipartUploadThreshold": 20971520,
         "multipartUploadSize": 15728640,
-        "urlExpirationTime":4000
+        "urlExpirationTime":4000,
+        "bucketName":"moolya-users",
+        "adminBucketKey":"moolya-admin-users"
       }
     },
     "graphql_proxy_url":"http://localhost:8090/graphql",
