Aws Bucket changes to resolve the region dynamically based on environment

--- a/settings-prod.json
+++ b/settings-prod.json
@@ -22,6 +22,7 @@
         "s3Config":{
           "accessKeyId":"AKIAJHBOSWTUYOZYGKHA",
           "secretAccessKey":"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",
+          "region":"ap-southeast-1",
           "maxAsyncS3":20,
           "s3RetryCount":3,
           "s3RetryDelay":1000,
