--- a/settings-qa.json
+++ b/settings-qa.json
@@ -22,6 +22,7 @@
       "s3Config":{
         "accessKeyId":"AKIAIOLVK4M2SMABND3Q",
         "secretAccessKey":"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",
+        "region":"ap-south-1",
         "maxAsyncS3":20,
         "s3RetryCount":3,
         "s3RetryDelay":1000,
