--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "react-toastr": "2.8.2",
     "react-transition-group": "^1.1.3",
     "react-utils": "1.0.0",
+    "react-virtualized-infinite-scroll": "0.0.4",
     "reactstrap": "4.5.0",
     "recompose": "0.23.1",
     "redis": "2.7.1",
