--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "redux": "3.6.0",
     "simpl-schema": "^0.2.2",
     "socket-kinda-ntp": "0.0.1",
+    "socket-ntp": "^0.1.0",
     "socket.io-client": "2.0.3",
     "styles": "0.2.1",
     "underscore": "1.8.3",
