--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "dinstar-sms-api": "0.1.5",
     "express": "^4.14.0",
     "extendify": "1.0.0",
+    "fastclick": "^1.0.6",
     "geocoder": "^0.2.2",
     "google-map-react": "0.22.3",
     "gql-merge": "0.0.4",
