--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "apollo-client": "^0.8.0",
     "apollo-server": "0.2.8",
     "async": "^2.3.0",
+    "awesome-phonenumber": "^2.1.0",
     "aws-config": "1.1.3",
     "aws-sdk": "^2.28.0",
     "babel-runtime": "^6.23.0",
@@ -102,7 +103,7 @@
     "immutability-helper": "^2.1.2",
     "jquery": "3.2.1",
     "jquery-mousewheel": "3.1.13",
-    "libphonenumber-js": "0.4.23",
+    "libphonenumber-js": "^0.4.29",
     "loadash": "0.0.1",
     "lodash": "4.17.4",
     "malihu-custom-scrollbar-plugin": "3.1.5",
