--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "bufferutil": "3.0.2",
     "connect-multiparty": "2.0.0",
     "cors": "^2.8.1",
+    "crypto-js": "^3.1.9-1",
     "csrf": "3.0.6",
     "custom-error": "0.2.1",
     "deep-diff": "^0.3.4",
@@ -112,6 +113,8 @@
     "points-cluster": "0.1.4",
     "prop-types": "15.5.10",
     "q": "^1.4.1",
+    "querystring": "^0.2.0",
+    "random-string": "^0.2.0",
     "rc-tabs": "^8.0.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
