--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "apollo-client": "^0.8.0",
     "apollo-server": "0.2.8",
     "async": "^2.3.0",
-    "awesome-phonenumber": "^2.1.0",
+    "awesome-phonenumber": "2.1.0",
     "aws-config": "1.1.3",
     "aws-sdk": "^2.28.0",
     "babel-runtime": "^6.23.0",
@@ -111,10 +111,10 @@
     "meteor-node-stubs": "^0.2.5",
     "mocha": "3.4.2",
     "moment": "^2.18.1",
-    "omit-deep-lodash": "^1.0.0",
+    "omit-deep-lodash": "1.0.0",
     "points-cluster": "0.1.4",
     "prop-types": "15.5.10",
-    "pug": "^2.0.0-rc.3",
+    "pug": "2.0.0-rc.3",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
     "random-string": "^0.2.0",
