--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "redis": "2.7.1",
     "redux": "3.6.0",
     "simpl-schema": "^0.2.2",
+    "sitemap": "^1.13.0",
     "socket-kinda-ntp": "0.0.1",
     "socket.io-client": "2.0.3",
     "styles": "0.2.1",
