--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "react-pure-render": "1.0.2",
     "react-rangeslider": "^2.0.1",
     "react-rating": "0.7.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "5.0.6",
     "react-responsive-tabs": "^1.1.3",
     "react-scrollbar": "0.5.1",
     "react-scrollbar-js": "1.0.1",
@@ -159,7 +159,7 @@
     "reactstrap": "^4.5.0",
     "recompose": "^0.23.1",
     "redis": "2.7.1",
-    "redux": "^3.6.0",
+    "redux": "3.6.0",
     "simpl-schema": "^0.2.2",
     "sitemap": "^1.13.0",
     "socket-kinda-ntp": "0.0.1",
