settings-prod.json edited online with Bitbucket

--- a/settings-prod.json
+++ b/settings-prod.json
@@ -36,7 +36,7 @@
     "smtpMailUrl":"smtp://noreply:RakSan123$@smtp.moolya.in:25",
     "googleApiKey": "AIzaSyAd7VZpzSCdkOrkgdhCbMm3JYqwGap0Pa4",
     "fromEmailAddr":"noreply@moolya.global",
-    "bugReportEmailAddr":"noreply@moolya.global",
+    "bugReportEmailAddr":"beta@moolya.global",
     "isEmailDomainCheckEnabled":true,
     "isProdENV":true,
     "isAuditEnabled":true
