settings-prod.json edited online with Bitbucket

--- a/settings-prod.json
+++ b/settings-prod.json
@@ -1,44 +1,53 @@
 {
-  "public":{
+  "public": {
     "googleApiKey": "AIzaSyAd7VZpzSCdkOrkgdhCbMm3JYqwGap0Pa4",
+    "conversationsBaseURL":"https://rkc.moolya.global",
     "isLeadSquaredTrackingEnabled":true,
     "dateFormat":"MM-DD-YYYY hh:mm:ss",
     "createNewUser":{
       "code"    : 209,
       "message" : "New User Created"
+    },
+    "countriesFlagBaseUrl":"https://moolyas3.raksan.in/moolya-images/flags/",
+    "minio":{
+      "minioConfig":{
+        "bucketName":"moolya-users",
+        "endPoint":"moolyas3.raksan.in",
+        "port":443,
+        "secure":true
+      }
     }
   },
   "private": {
-      "subChapterName":"Moolya",
-      "HierarchyCount": 10,
-      "emailConfig":{
-        "username": "raksanconsulting",
-        "key": "IMRne62ShKE6Q8zU0NJBsQ"
-      },
-     "smsConfig":{
-       "isWhiteListEnabled":true
-      },
-      "aws":{
-        "s3Config":{
-          "accessKeyId":"AKIAJHBOSWTUYOZYGKHA",
-          "secretAccessKey":"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",
-          "region":"ap-southeast-1",
-          "maxAsyncS3":20,
-          "s3RetryCount":3,
-          "s3RetryDelay":1000,
-          "multipartUploadThreshold": 20971520,
-          "multipartUploadSize": 15728640,
-          "urlExpirationTime":4000,
-          "bucketName":"moolya",
-          "adminBucketKey":"moolya-admin-users"
-        }
-      },
-    "smtpMailUrl":"smtp://noreply:RakSan123$@smtp.moolya.in:25",
+    "subChapterName":"Moolya",
+    "HierarchyCount": 10,
+    "emailConfig":{
+      "username": "raksanconsulting",
+      "key": "IMRne62ShKE6Q8zU0NJBsQ"
+    },
+    "smsConfig":{
+      "isWhiteListEnabled":true
+    },
+    "minio":{
+      "minioConfig":{
+        "accessKeyId":"rakSan$3buckEtaccEss",
+        "secretAccessKey":"Raksan$36u(ket#s#cret",
+        "region":"us-east-1",
+        "bucketName":"moolya-users",
+        "regDoc":"registrationDocuments",
+        "endPoint":"moolyas3.raksan.in",
+        "port":443,
+        "secure":true
+      }
+    },
+    "graphql_proxy_url":"http://localhost:8090/graphql",
     "googleApiKey": "AIzaSyAd7VZpzSCdkOrkgdhCbMm3JYqwGap0Pa4",
-    "fromEmailAddr":"noreply@moolya.in",
-    "bugReportEmailAddr":"noreply@moolya.in",
+    "smtpMailUrl":"smtp://noreply%40moolya.global:Moolya123@smtp.moolya.global:25",
+    "fromEmailAddr":"noreply@moolya.global",
+    "bugReportEmailAddr":"beta@moolya.global",
     "isEmailDomainCheckEnabled":true,
+    "isAuditEnabled":true,
     "isProdENV":true,
-    "isAuditEnabled":true
+    "conversationsBaseURL":"https://rkc.moolya.global"
   }
 }
