--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "react-composer": "1.0.1",
     "react-controllables": "0.6.0",
     "react-cropper": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-d3-basic": "1.6.11",
     "react-d3-tooltip": "1.4.14",
     "react-datetime": "^2.10.1",
