--- a/settings-qa.json
+++ b/settings-qa.json
@@ -19,7 +19,7 @@
     }
   },
   "private": {
-    "subChapterName":"Moolya",
+    "subChapterName":"moolya",
     "HierarchyCount": 10,
     "emailConfig":{
       "username": "raksanconsulting",
