--- a/settings-uat.json
+++ b/settings-uat.json
@@ -9,7 +9,7 @@
     }
   },
   "private": {
-    "subChapterName":"Moolya",
+    "subChapterName":"moolya",
     "HierarchyCount": 10,
     "emailConfig":{
       "username": "raksanconsulting",
