--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "react-rating": "0.7.1",
     "react-redux": "5.0.6",
     "react-responsive-tabs": "^1.1.3",
+    "react-rte": "0.15.0",
     "react-scrollbar": "0.5.1",
     "react-scrollbar-js": "1.0.1",
     "react-select": "1.0.0-rc.3",
