--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "socket.io-client": "2.0.3",
     "styles": "0.2.1",
     "underscore": "1.8.3",
+    "unit-converter": "^1.0.2",
     "useragent": "2.2.1",
     "utf-8-validate": "3.0.3",
     "video.js": "5.20.1"
