register URL settings in  ["login", "logout"]

--- a/settings-prod.json
+++ b/settings-prod.json
@@ -16,7 +16,8 @@
         "port":443,
         "secure":true
       }
-    }
+    },
+    "phpWebSiteLink": "https://www.moolya.global/register"
   },
   "private": {
     "subChapterName":"moolya",
