--- a/settings-qa.json
+++ b/settings-qa.json
@@ -16,7 +16,8 @@
         "port":443,
         "secure":true
       }
-    }
+    },
+    "phpWebSiteLink": "https://qa.moolya.global/register"
   },
   "private": {
     "subChapterName":"moolya",
