--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "immutability-helper": "^2.3.1",
     "jquery": "3.2.1",
     "jquery-mousewheel": "3.1.13",
+    "jsonwebtoken": "^8.1.0",
     "libphonenumber-js": "^0.4.29",
     "loadash": "0.0.1",
     "lodash": "4.17.4",
@@ -112,6 +113,7 @@
     "minio": "^3.2.1",
     "mocha": "3.4.2",
     "moment": "^2.18.1",
+    "mongodb": "^3.0.0-rc0",
     "omit-deep-lodash": "1.0.0",
     "points-cluster": "0.1.4",
     "prop-types": "15.5.10",
