--- a/package.json
+++ b/package.json
@@ -63,12 +63,12 @@
     }
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.2",
-    "apollo-client": "2.0",
-    "apollo-link": "^1.0.5",
-    "apollo-link-context": "^1.0.2",
-    "apollo-link-error": "^1.0.2",
-    "apollo-link-http": "^1.3.0",
+    "apollo-cache-inmemory": "^1.1.4",
+    "apollo-client": "^2.0.4",
+    "apollo-link": "^1.0.7",
+    "apollo-link-context": "^1.0.3",
+    "apollo-link-error": "^1.0.3",
+    "apollo-link-http": "^1.3.2",
     "apollo-server": "0.2.8",
     "async": "^2.3.0",
     "awesome-phonenumber": "2.1.0",
