--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "immutability-helper": "^2.3.1",
     "jquery": "3.2.1",
     "jquery-mousewheel": "3.1.13",
+    "kafka-node": "^2.3.0",
     "libphonenumber-js": "^0.4.29",
     "loadash": "0.0.1",
     "lodash": "4.17.4",
